--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,38 @@ background 2 #F5F4FA
 
 */
 
+/* Universal */
+
 body {
   /* Typography */
   font-family: 'Roboto', sans-serif;
   color: var(--primary-text-color);
   letter-spacing: 0.03em;
+}
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+
+  outline: red 1px solid;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
 }
 
 .logo-accent {
@@ -70,9 +97,40 @@ body {
   cursor: pointer;
 }
 
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  …
+}
+
 /* ---------- HEADER ---------- */
 
+.header {
+  border-bottom: 1px solid #ececec;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+.header-logo {
+  margin-right: 93px;
+}
+.header-list {
+  display: flex;
+}
+
+.header-list .header-item + .header-item {
+  margin-left: 50px;
+}
+
 .header-link {
+  display: block;
+  padding: 32px 0;
+
   /* Typography */
   font-weight: 500;
   font-size: 14px;
@@ -80,7 +138,16 @@ body {
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
 }
+
+.header-contacts-list {
+  display: flex;
+  margin-left: auto;
+}
+.header-contacts-list .header-contacts-item + .header-contacts-item {
+  margin-left: 50px;
+}
 .header-contacts-link {
+  padding: 32px 0;
   /* Typography */
   font-weight: 500;
   font-size: 14px;
@@ -91,18 +158,26 @@ body {
 
 /* ---------- HERO ---------- */
 
+.hero {
+  /* Visual */
+  background-color: #2f303a;
+  text-align: center;
+}
+
 .hero-title {
+  padding-top: 200px;
+  margin-bottom: 30px;
+
   /* Typography */
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
+
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--third-text-color);
-  /* Visual */
-  background-color: #000000;
 }
+
 .hero-btn {
   /* Typography */
   font-style: inherit;
@@ -113,10 +188,23 @@ body {
   letter-spacing: 0.06em;
   color: var(--third-text-color);
   /* Visual */
+  margin-right: auto;
+  margin-left: auto;
+
+  padding: 10px 32px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
   background-color: var(--accent-color);
 }
 
 /* ---------- ADVANTAGE ---------- */
+
+.advantage-list {
+  display: flex;
+  padding: 94px 0;
+  margin: 0 -15px;
+}
+
 .advantage-subtitle {
   /* Typography */
   font-weight: 700;
@@ -124,18 +212,63 @@ body {
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--secondary-text-color);
+
+  margin-bottom: 10px;
 }
 
+.advantage-item {
+  min-width: 270px;
+  margin: 0 15px;
+}
 .advantage-text {
   /* Typography */
   font-size: 14px;
   line-height: 1.71;
+
+  /* background-color: cyan; */
 }
 
 /* ---------- WORK ---------- */
 
+.work-title {
+  padding-bottom: 50px;
+}
+.work-list {
+  display: flex;
+  margin: 0 -15px;
+  padding-bottom: 94px;
+}
+
+.work-item {
+  margin: 0 15px;
+}
+
 /* ---------- COMMAND ----------- */
+
+.command-title {
+  padding-top: 94px;
+  margin-bottom: 50px;
+}
+.command-list {
+  display: flex;
+  margin: 0 -15px;
+}
+.command-item {
+  display: flex;
+  flex-direction: column;
+  margin: 0 15px;
+  margin-bottom: 94px;
+
+  /* test */
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
 .command-subtitle {
+  padding-top: 30px;
+  margin-bottom: 10px;
   /* Typography */
   font-weight: 500;
   font-size: 16px;
@@ -145,6 +278,7 @@ body {
 }
 
 .command-text {
+  padding-bottom: 30px;
   /* Typography */
   font-size: 16px;
   line-height: 1.19;
@@ -152,30 +286,55 @@ body {
 }
 
 /* ------------- FOOTER -------------- */
+.footer {
+  background-color: #2f303a;
+}
+
+.footer-logo {
+  display: inline-block;
+  padding-top: 60px;
+  margin-bottom: 20px;
+}
 .address {
   font-style: normal;
 }
+.addres-list .addres-item + .addres-item {
+  margin-top: 9px;
+}
+
+.addres-list {
+  display: inline-block;
+  padding-bottom: 60px;
+}
+
 .adress-link {
   /* Typography */
-
   font-size: 14px;
   line-height: 1.71;
   color: var(--third-text-color);
   /* Visual */
-  background-color: black;
+  /* background-color: black; */
 }
 .adress-contacts-link {
   /* Typography */
-
   font-size: 14px;
   line-height: 1.71;
   color: rgba(255, 255, 255, 0.6);
   /* Visual */
-  background-color: black;
+  /* background-color: black; */
 }
 
 /* --------- PORTFOLIO ------------ */
-
+.portfolio-filter {
+  display: flex;
+  justify-content: center;
+  padding-top: 94px;
+  margin: 0 -4px;
+  margin-bottom: 50px;
+}
+.filter-item {
+  margin: 0 4px;
+}
 .portfolio-btn {
   /* Typography */
   font-family: inherit;
@@ -192,7 +351,23 @@ body {
   color: var(--third-text-color);
   background-color: var(--accent-color);
 }
+.portfolio-list {
+  display: flex;
+  margin: -15px;
+  flex-wrap: wrap;
+}
+
+.portfolio-item {
+  margin: 15px; 
+  
+}
+.portfolio-item:nth-last-child(-n + 3) {
+  margin-bottom: 94px;
+}
+
 .portfolio-title {
+  padding-top: 20px;
+  margin-bottom: 4px;
   /* Typography */
   font-weight: 700;
   font-size: 18px;
@@ -201,8 +376,15 @@ body {
   color: var(--secondary-text-color);
 }
 .portfolio-text {
+  padding-bottom: 20px;
   /* Typography */
   font-size: 16px;
   line-height: 1.87;
   color: var(--primary-text-color);
+}
+.portfolio-item-description {
+  border-bottom: 1px solid #EEEEEE;
+  border-left: 1px solid #EEEEEE;
+  border-right: 1px solid #EEEEEE;
+  padding-left: 24px;
 }
