--- a/css/style.css
+++ b/css/style.css
@@ -356,6 +356,9 @@ img {
   margin: -15px;
   flex-wrap: wrap;
 }
+.portfolio-list:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
 
 .portfolio-item {
   margin: 15px; 
