--- a/css/style.css
+++ b/css/style.css
@@ -195,10 +195,12 @@ a:focus {
   letter-spacing: 0.06em;
   color: var(--third-text-color);
   /* Visual */
+
   margin-right: auto;
   margin-left: auto;
 
   padding: 10px 32px;
+  border: transparent;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   background-color: var(--accent-color);
